--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-  <a class="navbar-brand" routerLink="/">O</a>
+  <a class="navbar-brand" routerLinkActive="active curent" routerLink="/">O</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,13 +7,18 @@
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
+      <li class="nav-item" routerLinkActive="active curent" >
         <a class="nav-link" routerLink="/shopping-cart">Shopping Cart</a>
       </li>
-      <li *ngIf="!user" class="nav-item">
-        <a class="nav-link" routerLink="/login">Login</a>
-      </li>
-      <li ngbDropdown *ngIf="user" class="nav-item dropdown ">
+
+      <ng-template #anonymousUser>
+        <li  class="nav-item" routerLinkActive="active curent" >
+          <a class="nav-link" routerLink="/login">Login</a>
+        </li>
+
+      </ng-template>
+      
+      <li ngbDropdown *ngIf="auth.user$ | async as user ;else anonymousUser" class="nav-item dropdown ">
         <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="false">{{ user.displayName }}</a>
         <div ngbDropdownMenu class="dropdown-menu " aria-labelledby="dropdown01">
